# Analytics-Agents-FastAPI-PydanticAI

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/agents/: orchestrator.py  rate_limits.py  sql_agent.py  tools.py  viz_agent.py
backend/app/api/: routes.py
backend/app/database/: duckdb_client.py  sync_motherduck.py
backend/app/schemas/: chat.py
backend/app/utils/: prompts.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_motherduck_sync.py  test_rate_limits.py
data/: .gitkeep
frontend-nextjs/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/src/components/: AdminLoginModal.tsx  ChartRenderer.tsx  ChatInterface.tsx  LandingPage.tsx  MessageInput.tsx  MessageList.tsx  MetadataDisplay.tsx
frontend-nextjs/src/lib/: api.ts  types.ts
